--- a/3/technologie.tex
+++ b/3/technologie.tex
@@ -184,7 +184,7 @@ oraz w kilku różnych językach programowania:
 	\item ObjectiveC
 	\item platforma .NET
 \end{itemize}
-Dostęp do technologii Speech Cloud możliwy jest zarówno za pomocą protokołu SOAP oraz przez reprezentację technologii REST. W tej chwili niezależnie od używanego API można uzyskać następującą funkcjonalność:
+Dostęp do technologii Speech Cloud możliwy jest zarówno za pomocą protokołu SOAP oraz przez technologię REST. W tej chwili niezależnie od używanego API można uzyskać następującą funkcjonalność:
 \begin{itemize}
 	\item wygenerowanie pliku dźwiękowego z podanego tekstu
 	\item pobranie informacji o dostępnych głosach i kodekach
