Added chapter 8 'przebieg integracji'

--- a/thesis.tex
+++ b/thesis.tex
@@ -171,6 +171,7 @@ Kraków, 2012
 \include{6/projekt_i_implementacja}
 \include{5/current_solutions}
 \include{3/technologie}	
+\include{8/przebieg_integracji}
 \include{4/wymagania}						
 	
 
