Replaced layered image with an esb.

--- a/8/przebieg_integracji.tex
+++ b/8/przebieg_integracji.tex
@@ -21,8 +21,8 @@ Rozdział ten przedstawia konkretną konfigurację systemu SpeechProcessingPlatf
 
 \begin{figure}[!h]
 	\centering
-	\includegraphics[scale=0.7]{layered_architecture.png}
-	\caption{Architektura systemu SpeechProcessingPlatform}\label{fig:esb_configuration}
+	\includegraphics[scale=0.6]{esb.png}
+	\caption{Przykładowa konfiguracja  systemu SpeechProcessingPlatform}\label{fig:esb_configuration}
 \end{figure}
 
 Rysunek \ref{fig:esb_configuration} przedstawai przykładową konfigurację platformy, która została wykorzystana do przeprowadzenia testów oraz weryfikacji proponowanej architektury. W tym celu z systemem zostały zintegrowane następujące usługi:
